turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: not found: value black
	case Color.BLACK => setCouleurSol(black) ;gauche();avance()
                                          ^LangtonsAnt:12: error: not found: value white
	case Color.WHITE => setCouleurSol(white) ;droite();avance()
                                          ^